--- a/main.tex
+++ b/main.tex
@@ -124,7 +124,7 @@ version={4.0},
 \lhead
 {
 	\begin{picture}(0,0)
-	\put(0,-35){\includegraphics{logo_first_page}}
+	\put(0,-35){\includegraphics{fig/logo_first_page}}
 	\put(30,-22){\scriptsize\MakeUppercase{INTL Journal of Electronics and Telecommunications, \YEAR, Vol. \VOLUME, no. \NUMBER, pp. \PAGES}}
 	\put(30,-30){\scriptsize{Manuscript received \RECEIVEDATE; revised \REVISIONDATE.$\qquad\,\quad\qquad$\DOI}}
 	\end{picture}
