--- a/bib/bib-art1.bib
+++ b/bib/bib-art1.bib
@@ -321,6 +321,15 @@ The problem is: the encryption is backed by SSL/TLS PKI, which itself trusts Int
   url    = {https://www.thousandeyes.com/blog/route-leak-causes-amazon-and-aws-outage},
 }
 
+@InProceedings{Madory2019,
+  author       = {Doug Madory and Matt Prosser},
+  booktitle    = {RIPE 79},
+  date         = {2019-10-14},
+  title        = {Excessive BGP AS Path Prepending is aSelf-Inflicted Vulnerability},
+  organization = {Oracle Internet Intelligence},
+  url          = {https://ripe79.ripe.net/presentations/64-prepending_madory2.pdf},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
