--- a/content/taxonomy.tex
+++ b/content/taxonomy.tex
@@ -105,4 +105,4 @@ As presented in \cite{Gavrichenkov2015}, further executed and measured in \cite{
 Researchers suggest two countermeasures for CA's: \emph{Multiple Vantage Point Verification} and \emph{Monitoring BGP Route Age}.
 
 \subsubsection{Excessive BGP ASPath prepending increase risk of successful routing incident}
-Many network operators use prependig as a traffic shaping tool, because by the design of the BGP protocol, router should choose the shorter, not prepended route (assuming that other criteria are equal). Prepending is a common practice in the Internet and if done correctly if may be used beneficially for traffic steering. However, researchers point out\cite{Madory2019} that wrong usage called \textbf{prepend-to-all} has been observed in over a 8\% prefixes of IPv4 Global Routing Table. This practice is all about advertising the prefix with multiple origin ASN repetition in the AS Path. This opens a vulnerability that if another AS will announce (mistakenly or on purpose) same prefix with shorter AS Path, traffic will be redirected from it's usual path with consequences as described in \ref{def:impact:rl}. 
+Many network operators use prepending as a traffic shaping tool, because by the design of the BGP protocol, router should choose the shorter, not prepended route (assuming that other criteria are equal). Prepending is a common practice in the Internet and if done correctly if may be used beneficially for traffic steering. However, researchers point out\cite{Madory2019} that wrong usage called \textbf{prepend-to-all} has been observed in over a 8\% prefixes of IPv4 Global Routing Table. This practice is all about advertising the prefix with multiple origin ASN repetition in the AS Path. This opens a vulnerability that if another AS will announce (mistakenly or on purpose) same prefix with shorter AS Path, traffic will be redirected from it's usual path with consequences as described in \ref{def:impact:rl}. 
