--- a/bib/bib-art1.bib
+++ b/bib/bib-art1.bib
@@ -330,6 +330,42 @@ The problem is: the encryption is backed by SSL/TLS PKI, which itself trusts Int
   url          = {https://ripe79.ripe.net/presentations/64-prepending_madory2.pdf},
 }
 
+@Article{Goldberg2014,
+  author       = {Sharon Goldberg},
+  date         = {2014-08},
+  journaltitle = {Queue},
+  title        = {Why Is It Taking So Long to Secure Internet Routing?},
+  doi          = {10.1145/2668152.2668966},
+  number       = {8},
+  pages        = {20--33},
+  volume       = {12},
+  publisher    = {Association for Computing Machinery ({ACM})},
+}
+
+@Article{Chakrabarti2002,
+  author       = {A. Chakrabarti and G. Manimaran},
+  date         = {2002-11},
+  journaltitle = {{IEEE} Network},
+  title        = {Internet infrastructure security: a taxonomy},
+  doi          = {10.1109/mnet.2002.1081761},
+  number       = {6},
+  pages        = {13--21},
+  volume       = {16},
+  publisher    = {Institute of Electrical and Electronics Engineers ({IEEE})},
+}
+
+@Article{Schlamp2016,
+  author      = {Johann Schlamp and Ralph Holz and Quentin Jacquemart and Georg Carle and Ernst W. Biersack},
+  date        = {2016-07-01},
+  title       = {HEAP: Reliable Assessment of BGP Hijacking Attacks},
+  eprint      = {1607.00096},
+  eprintclass = {cs.NI},
+  eprinttype  = {arXiv},
+  abstract    = {The detection of BGP prefix hijacking attacks has been the focus of research for more than a decade. However, state-of-the-art techniques fall short of detecting more elaborate types of attack. To study such attacks, we devise a novel formalization of Internet routing, and apply this model to routing anomalies in order to establish a comprehensive attacker model. We use this model to precisely classify attacks and to evaluate their impact and detectability. We analyze the eligibility of attack tactics that suit an attacker's goals and demonstrate that related work mostly focuses on less impactful kinds of attacks. We further propose, implement and test the Hijacking Event Analysis Program (HEAP), a new approach to investigate hijacking alarms. Our approachis designed to seamlessly integrate with previous work in order to reduce the high rates of false alarms inherent to these techniques. We leverage several unique data sources that can reliably disprove malicious intent. First, we make use of an Internet Routing Registry to derive business or organisational relationships between the parties involved in an event. Second, we use a topology-based reasoning algorithm to rule out events caused by legitimate operational practice. Finally, we use Internet-wide network scans to identify SSL/TLS-enabled hosts, which helps to identify non-malicious events by comparing public keys prior to and during an event. In our evaluation, we prove the effectiveness of our approach, and show that day-to-day routing anomalies are harmless for the most part. More importantly, we use HEAP to assess the validity of publicly reported alarms. We invite researchers to interface with HEAP in order to cross-check and narrow down their hijacking alerts.},
+  file        = {:http\://arxiv.org/pdf/1607.00096v1:PDF},
+  keywords    = {cs.NI, cs.CR, C.2.0; C.2.2; C.2.3; C.2.6},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
 
 @Comment{jabref-meta: grouping:
